bpo-44622: Set line number of END_ASYNC_FOR to match that of iterator. (GH-27160)